--- a/GGD_Groep_9/app/src/main/res/values/strings.xml
+++ b/GGD_Groep_9/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="titelRamp">Brand Helmond</string>
     <string name="laatsteUpdate">Laatste update: 15:00</string>
     <string name="omschrijvingRamp">De brand bij Chemie-Pack breekt uit op woensdagmiddag 5 januari</string>
+    <string name="settingsTitel">Instellingen</string>
 </resources>
