--- a/GGD_Groep_9/app/src/main/res/values/strings.xml
+++ b/GGD_Groep_9/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Rampen</string>
+    <string name="app_name">R.A.M.P.</string>
 
     <string name="action_settings">Settings</string>
     <string name="titelRamp">Brand Helmond</string>
