--- a/GGD_Groep_9/app/src/main/res/values/strings.xml
+++ b/GGD_Groep_9/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">R.A.M.P.</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_sendVragenlijst">Verstuur vragenlijst</string>
     <string name="titelRamp">Brand Helmond</string>
     <string name="laatsteUpdate">Laatste update: 15:00</string>
     <string name="omschrijvingRamp">De brand bij Chemie-Pack breekt uit op woensdagmiddag 5 januari</string>
