Back-button Settings act

--- a/GGD_Groep_9/app/src/main/res/values/strings.xml
+++ b/GGD_Groep_9/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="title_activity_vragenlijst">VragenlijstActivity</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="inloggen">inloggen</string>
+    <string name="uitloggen">uitloggen</string>
+    <string name="ingelogd">Ingelogd met Google+</string>
+    <string name="uitgelogd">Uitgelogd</string>
 </resources>
